# beingdb

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  beingdb.opam  docker-compose.yml  docker-entrypoint.sh  dune-project  nginx.conf
docs/: api.md  deployment.md  digital-preservation.md  getting-started.md  installation.md  internals.md  query-language.md
examples/: sample_predicates.pl  setup_examples.sh  test_queries.sh
lib/: api.ml  beingdb.ml  dune  git_backend.ml  pack_backend.ml  parse_predicate.ml  query_engine.ml  query_parser.ml  query_safety.ml  query_safety.mli  sync.ml  types.ml
test/: README.md  docker_test.sh  dune  integration_test.sh  run_all_tests.sh  setup_test_data.sh  test_beingdb.ml
